# drasi-server

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Cross.toml  DOCKER.md  Dockerfile  Dockerfile.cross-gnu  Dockerfile.cross-gnu-aarch64  Dockerfile.cross-musl  Dockerfile.cross-musl-aarch64  Dockerfile.cross-windows-gnu  Dockerfile.local  MIGRATION_NOTES_GQL_DEFAULT.md  Makefile  README.md  _typos.toml  build.rs  docker-compose-server-only.yml  docker-compose.yml  dynamic-plugins-plan.md  pr-84-review-plan.md
.cargo/: config.toml
.claude/: notify.sh
.devcontainer/: devcontainer.json  post-create.sh
.devcontainer/getting-started/: devcontainer.json  post-create.sh
.devcontainer/playground/: devcontainer.json  post-create.sh
.devcontainer/trading/: devcontainer.json  post-create.sh
.github/skills/commit-staged/: SKILL.md
.github/workflows/: add-prs-to-project.lock.yml  add-prs-to-project.md  cargo-audit.yml  ci.yml  devskim.yml  docker-build-check.yml  integration-test-getting-started.yml  integration-test.yml  lint.yml  nightly-e2e.yml  pr-all-reviewers.yml  pr-assignment-check.yml  pr-correctness-reviewer.lock.yml  pr-correctness-reviewer.md  pr-design-reviewer.lock.yml  pr-design-reviewer.md  pr-docs-reviewer.lock.yml  pr-docs-reviewer.md  pr-first-approval-label-run.yml  pr-first-approval-label.yml  pr-prior-art-reviewer.lock.yml  pr-prior-art-reviewer.md  pr-security-reviewer.lock.yml  pr-security-reviewer.md  pr-testing-reviewer.lock.yml  pr-testing-reviewer.md  publish-image.yml  release-cross.yaml  release.yaml  scorecard.yaml  test.yml  trigger-issue-research.yml  validate-yaml-snippets.lock.yml  validate-yaml-snippets.md  version-bump.yaml  version-sync.yaml
config/: example.yaml  server-docker.yaml  server-minimal.yaml  server-with-env-vars.yaml  server-with-identity-providers.yaml  server.yaml
design/proposals/: drasi-mcp-proposal.md
dev-tools/vscode/drasi-server/: LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
docs/: rolling-plugin-upgrade-poc-report.md
examples/: README.md  basic_setup.rs
examples/configs/: README.md
examples/configs/01-fundamentals/: first-continuous-query.yaml  hello-world.yaml  mock-with-logging.yaml
examples/configs/02-sources/: grpc-streaming-source.yaml  http-webhook-receiver.yaml  (+1 more)
examples/debug-platform-building-comfort/: requests.http  server-config.yaml  start-server.sh
examples/drasi-platform/: README.md  requests.http  server-config.yaml
examples/getting-started/: README.md  locations.json  requests.http  server-config.yaml
examples/github-webhooks/: .env  .env.example  README.md  server-config.yaml
examples/playground/: README.md  start.sh  stop.sh  web_api.http  web_api_query.http  web_api_reaction.http  web_api_source.http
examples/postgres-azure-keyvault/: README.md  server-config.yaml
examples/postgres-secrets/: README.md  docker-start-postgres.sh  init-db.sql  secrets.json  server-config.yaml
examples/sse-cli/: Cargo.toml
examples/trading/: CONTRIBUTING.md  README.md  start-demo.sh  stop-demo.sh  web_api.http  web_api_query.http  web_api_reaction.http  web_api_source.http
sdk/: README.md
sdk/react/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
solutions/: iot-temperature-monitor.yaml  simple-log-pipeline.yaml
src/: builder.rs  builder_result.rs  builtin_plugins.rs  cli_styles.rs  config.rs  dynamic_loading.rs  factories.rs  index_provider.rs  instance_paths.rs  instance_registry.rs  lib.rs  main.rs  persistence.rs  plugin_install.rs  plugin_lockfile.rs  plugin_operations.rs  plugin_orchestrator.rs  plugin_registry.rs  server.rs  ui_assets.rs
src/api/: error.rs  handlers.rs  joins_tests.rs  mappings.rs  mod.rs  openapi.rs  tests.rs  version.rs
src/config/: env_interpolation.rs  loader.rs  mod.rs  plugin_validation.rs  schema_validation.rs  types.rs  validation.rs
src/init/: builder.rs  mod.rs  prompts.rs
src/mcp/: mod.rs  tools.rs
src/plugin/: install.rs  list.rs  mod.rs  remove.rs  search.rs  upgrade.rs
src/upgrade/: engine.rs  error.rs  mod.rs  plan.rs  validation.rs
tests/: README.md  api.rs  api_contract_test.rs  api_create_query_joins.rs  api_integration_test.rs  api_persistence_test.rs  api_plugin_routing_test.rs  api_query_joins_test.rs  api_state_consistency_test.rs  bootstrap_results_test.rs  clone_instance_test.rs  config_parsing_failure_test.rs  config_persistence_roundtrip_test.rs  config_value_integration_test.rs  default_query_language_test.rs  dto_camelcase_test.rs  e2e_pipeline_test.rs  enum_serialization_test.rs  error_resilience_test.rs  example_configs_validation_test.rs  grpc_integration_test.sh  hot_reload_test.rs  http_json_yaml_test.rs  http_webhook_config_test.rs  http_webhook_mapper_test.rs  init_output_test.rs  iot_template_e2e_test.rs  library_integration.rs  library_integration_test.rs  mcp_stdio_test.rs  openapi_test.rs  persist_index_test.rs  plugin_descriptor_test.rs  plugin_smoke_test.sh  readme_examples_validation_test.rs  redis_helpers_test.rs  run_all.sh  run_all_tests.sh  run_interactive_demo.sh  run_working_tests.sh  (+16 more)
tests/api/: README.md  contract_test.rs  integration_test.rs  persistence_test.rs  state_consistency_test.rs  test_utils.rs
tests/fixtures/upgrade_test_plugin/: Cargo.toml  build.rs
tests/fixtures/upgrade_test_plugin/src/: lib.rs
tests/grpc/: README.md  grpc_adaptive_example.yaml  grpc_example.yaml  run_test.sh  run_test_adaptive.sh  run_test_debug.sh
tests/http/: http_adaptive_example.yaml  http_example.yaml  run_test.sh  run_test_adaptive.sh
tests/integration/: run-integration-test.sh
tests/sse-console/: .gitignore  README.md  configs.json  index.ts  package.json  types.ts  web_api_query.http
tests/test_support/: config_helpers.rs  mock_components.rs  mod.rs  redis_helpers.rs  solution_helpers.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  monaco-setup.ts
xtask/: Cargo.toml
xtask/src/: main.rs  vendor.rs
(+311 files in other folders)
