# Copyright 2025 The Drasi Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [".", "xtask"]

[package]
name = "drasi-server"
version = "0.1.0"
edition = "2021"
authors = ["Drasi Project"]
description = "Standalone Drasi server for data change processing"
license = "Apache-2.0"
repository = "https:#github.com/drasi-project/drasi-server"
default-run = "drasi-server"

[lib]
name = "drasi_server"
path = "src/lib.rs"

[[bin]]
name = "drasi-server"
path = "src/main.rs"

[dependencies]
# Drasi core library (all middleware, using system libjq instead of bundled-jq)
drasi-lib = { version = "0.3.8", features = [
  "middleware-jq",
  "middleware-decoder",
  "middleware-map",
  "middleware-parse-json",
  "middleware-promote",
  "middleware-relabel",
  "middleware-unwind",
] }

# Source plugins
drasi-source-mock = { version = "0.1.7", optional = true }
drasi-source-http = { version = "0.1.7", optional = true }
drasi-source-grpc = { version = "0.1.7", optional = true }
drasi-source-postgres = { version = "0.1.8", optional = true }
drasi-source-mssql = { version = "0.1.0", optional = true }

# Bootstrap provider plugins
drasi-bootstrap-postgres = { version = "0.1.8", optional = true }
drasi-bootstrap-scriptfile = { version = "0.1.7", optional = true }
drasi-bootstrap-noop = "0.1.6"
drasi-bootstrap-application = "0.1.7"
drasi-bootstrap-mssql = { version = "0.1.0", optional = true }

# Reaction plugins
drasi-reaction-log = { version = "0.1.7", optional = true }
drasi-reaction-http = { version = "0.1.8", optional = true }
drasi-reaction-http-adaptive = { version = "0.2.5", optional = true }
drasi-reaction-grpc = { version = "0.2.5", optional = true }
drasi-reaction-grpc-adaptive = { version = "0.1.6", optional = true }
drasi-reaction-sse = { version = "0.2.6", optional = true }
drasi-reaction-profiler = { version = "0.2.5", optional = true }
drasi-reaction-storedproc-postgres = { version = "0.2.5", optional = true }
drasi-reaction-storedproc-mysql = { version = "0.2.5", optional = true }
drasi-reaction-storedproc-mssql = { version = "0.2.5", optional = true }
drasi-reaction-application = "0.2.5"

# Index plugins
drasi-index-rocksdb = "0.2.2"
drasi-index-garnet = "0.1.4"

# State store plugins
drasi-state-store-redb = "0.1.5"

# Plugin SDK
drasi-plugin-sdk = "0.3.1"

# Host SDK for dynamic plugin loading
drasi-host-sdk = { version = "0.1.0", optional = true, features = ["registry", "fetcher"] }

# Server-specific dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
bytes = "1.6"
futures-util = "0.3"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.0", features = ["derive"] }
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
uuid = { version = "1.0", features = ["v4"] }
indexmap = "2.0"
thiserror = "1.0"
dotenvy = "0.15"
inquire = "0.7"
handlebars = "6"
async-stream = "0.3.6"
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.8"

[dev-dependencies]
# Testing utilities
async-trait = "0.1"
tracing = "0.1"
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"
assert_matches = "1.5"
serial_test = "3.0"
pretty_assertions = "1.4"
semver = "1.0"
test-case = "3.3"
wiremock = "0.5"

# Additional testing dependencies
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
rstest = "0.18"
drasi-core = "0.3.3"

# Integration testing with testcontainers
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
redis = { version = "0.24", features = ["tokio-comp", "streams"] }

[features]
default = ["builtin-plugins"]

# Enable all optional plugin crate dependencies (for building them in-tree).
# Does NOT register them statically — just adds them to the dependency graph.
all-plugin-deps = [
    "dep:drasi-source-mock",
    "dep:drasi-source-http",
    "dep:drasi-source-grpc",
    "dep:drasi-source-postgres",
    "dep:drasi-source-mssql",
    "dep:drasi-bootstrap-postgres",
    "dep:drasi-bootstrap-scriptfile",
    "dep:drasi-bootstrap-mssql",
    "dep:drasi-reaction-log",
    "dep:drasi-reaction-http",
    "dep:drasi-reaction-http-adaptive",
    "dep:drasi-reaction-grpc",
    "dep:drasi-reaction-grpc-adaptive",
    "dep:drasi-reaction-sse",
    "dep:drasi-reaction-profiler",
    "dep:drasi-reaction-storedproc-postgres",
    "dep:drasi-reaction-storedproc-mysql",
    "dep:drasi-reaction-storedproc-mssql",
]

# Static build: plugins compiled into the binary via register_*_factory() calls.
builtin-plugins = ["all-plugin-deps"]

# Dynamic build: plugins loaded at runtime from cdylib .so/.dylib/.dll files
# via the drasi-host-sdk. Each plugin is self-contained with its own tokio runtime.
dynamic-plugins = ["dep:drasi-host-sdk"]

[lints.rust]
warnings = "deny"
unused = "allow"

[lints.clippy]
print_stdout = "warn"
unwrap_used = "warn"
uninlined_format_args = "warn"
module_inception = "allow"
ptr_arg = "allow"
type_complexity = "allow"
large_enum_variant = "allow"


# Uncomment this section for local development to use path-based dependencies
# [patch.crates-io]
# drasi-core = { path = "../drasi-core/core" }
# drasi-lib = { path = "../drasi-core/lib" }
# drasi-source-mock = { path = "../drasi-core/components/sources/mock" }
# drasi-source-http = { path = "../drasi-core/components/sources/http" }
# drasi-source-grpc = { path = "../drasi-core/components/sources/grpc" }
# drasi-source-postgres = { path = "../drasi-core/components/sources/postgres" }
# drasi-bootstrap-postgres = { path = "../drasi-core/components/bootstrappers/postgres" }
# drasi-bootstrap-scriptfile = { path = "../drasi-core/components/bootstrappers/scriptfile" }
# drasi-bootstrap-noop = { path = "../drasi-core/components/bootstrappers/noop" }
# drasi-reaction-log = { path = "../drasi-core/components/reactions/log" }
# drasi-reaction-http = { path = "../drasi-core/components/reactions/http" }
# drasi-reaction-http-adaptive = { path = "../drasi-core/components/reactions/http-adaptive" }
# drasi-reaction-grpc = { path = "../drasi-core/components/reactions/grpc" }
# drasi-reaction-grpc-adaptive = { path = "../drasi-core/components/reactions/grpc-adaptive" }
# drasi-reaction-sse = { path = "../drasi-core/components/reactions/sse" }
# drasi-reaction-profiler = { path = "../drasi-core/components/reactions/profiler" }
# drasi-index-rocksdb = { path = "../drasi-core/components/indexes/rocksdb" }
# drasi-state-store-redb = { path = "../drasi-core/components/state_stores/redb" }
