[package]
name = "drasi-source-upgrade-test"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
drasi-lib = { path = "../../../../drasi-core/lib" }
drasi-plugin-sdk = { path = "../../../../drasi-core/components/plugin-sdk" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
